fix z-index for reader searchbar

--- a/src/renderer/assets/styles/components/readerHeader.scss
+++ b/src/renderer/assets/styles/components/readerHeader.scss
@@ -165,7 +165,7 @@
     width: 100vw;
     height: 48px;
     background-color: var(--color-extralight-grey);
-    z-index: 200;
+    z-index: 100;
     top: 70px;
     right: 0;
     left: unset;
